--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
             <div class="picture"></div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scriptH.js"></script>
 </body>
 </html>
