--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="picture"></div>
         </div>
     </div>
-    <script src="scriptH.js"></script>
+    <!-- <script type="module" src="./modules/model.js"></script> -->
+    <script type="module" src="scriptH.js"></script>
 </body>
 </html>
