--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="app">
-        <div class="wordDisplay">
-
-        </div>
-        <div class="pictureDisplay">
-            <div class="picture"></div>
-            <div class="picture"></div>
-            <div class="picture"></div>
-        </div>
+      <div class="wordDisplay"></div>
+      <div class="pictureDisplay">
+        <div class="picture"></div>
+        <div class="picture"></div>
+        <div class="picture"></div>
+      </div>
     </div>
-    <!-- <script type="module" src="./modules/model.js"></script> -->
+    <button type="button">Start</button>
     <script type="module" src="scriptH.js"></script>
-</body>
+  </body>
 </html>
+
