Add game scene functionality

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   </head>
   <body>
     <div id="app">
+      <!-- <div class="startScene">
+        <div class="title">Monster Vocab</div>
+        <button class="startButton">Start</button>
+      </div> -->
+      <!-- <div class="gameoverScene">
+        <div class="gameoverTitle">Game Over</div>
+        <button class="restartButton">Restart</button>
+      </div> -->
       <div class="wordDisplay"></div>
       <div class="pictureDisplay">
         <div class="picture"></div>
@@ -17,7 +25,7 @@
         <div class="picture"></div>
       </div>
     </div>
-    <button type="button">Start</button>
+    <!-- <button type="button">Start</button> -->
     <script type="module" src="scriptH.js"></script>
   </body>
 </html>
