Add winner scene

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <div class="gameoverTitle">Game Over</div>
         <button class="restartButton">Restart</button>
       </div> -->
+      <!-- <div class="winnerScene">
+        <div class="winnerTitle">Well Done!</div>
+        <button class="startNewGameButton">Restart</button>
+      </div> -->
       <div class="wordDisplay"></div>
       <div class="pictureDisplay">
         <div class="picture"></div>
