Change script name on html file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <!-- <button type="button">Start</button> -->
-    <script type="module" src="scriptH.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
 
